# mediacodec

./: README.md
MediaCodecTest/app/: build.gradle
MediaCodecTest/app/src/androidTest/java/ican/ytx/com/mediacodectest/: ExampleInstrumentedTest.java
MediaCodecTest/app/src/main/: AndroidManifest.xml
MediaCodecTest/app/src/main/cpp/: CMakeLists.txt
MediaCodecTest/app/src/main/cpp/gl_engine/include/: gl_engine.h
MediaCodecTest/app/src/main/cpp/gl_engine/src/: gl_engine.cpp  lock.cpp
MediaCodecTest/app/src/main/cpp/hybrid_player/: CMakeLists.txt
MediaCodecTest/app/src/main/cpp/hybrid_player/src/: GLThread.cpp  GlslFilter.cpp  HybridMediaPlayer.cpp  MessageQueue.cpp  Thread.cpp  VideoRefreshController.cpp  VideoStateInfo.cpp  android_media_YtxMediaPlayer.cpp  frame_queue.cpp  frame_queue_video.cpp  looper.cpp
MediaCodecTest/app/src/main/cpp/include/: GLThread.h  GlslFilter.h  HybridMediaPlayer.h  VideoRefreshController.h  VideoStateInfo.h  android_media_YtxMediaPlayer.h  ffinc.h  frame_queue.h  frame_queue_video.h  lock.h
MediaCodecTest/app/src/main/java/ican/ytx/com/mediacodectest/: AndroidHardwareCodecUtils.java  MainActivity.java
MediaCodecTest/app/src/main/java/ican/ytx/com/mediacodectest/hybridplayer/: AndroidHardwareCodecUtils.java  MainActivity.java
MediaCodecTest/app/src/main/java/ican/ytx/com/mediacodectest/media/player/misc/: IMediaDataSource.java  IMediaFormat.java  ITrackInfo.java
MediaCodecTest/app/src/main/java/ican/ytx/com/mediacodectest/media/player/permission/: AfterPermissionGranted.java  PermissionCallbackManager.java  PermissionRequestListener.java  PermissionUtil.java
MediaCodecTest/app/src/main/java/ican/ytx/com/mediacodectest/media/player/pragma/: AbstractMediaPlayer.java  AndroidMediaPlayer.java  HybridMediaPlayer.java  IMediaPlayer.java  ISurfaceTextureHolder.java  ISurfaceTextureHost.java  LibLoader.java  MediaInfo.java  YtxLog.java
MediaCodecTest/app/src/main/java/ican/ytx/com/mediacodectest/media/player/render/: CustomChooseConfig.java  Filter.java  GLProgram.java  GlslFilter.java  GraphicGLSurfaceView.java  GraphicRenderer.java  MSurfaceTexture.java  Picture.java  RendererUtils.java  VideoFrame.java  VideoGlSurfaceView.java
MediaCodecTest/app/src/main/java/ican/ytx/com/mediacodectest/media/player/view/: IMediaController.java  IRenderView.java  MeasureHelper.java  SurfaceRenderView.java  YtxMediaController.java  YtxVideoView.java
MediaCodecTest/app/src/main/java/ican/ytx/com/mediacodectest/view/: CustomChooseConfig.java  Filter.java  GlslFilter.java  GraphicRenderer.java  Image.java  Photo.java  RendererUtils.java  RendererUtils2.java  VideoFrame.java  VideoGlSurfaceView.java  WorkThread.java
MediaCodecTest/app/src/main/res/layout/: activity_main.xml
MediaCodecTest/app/src/main/res/values/: strings.xml
MediaCodecTest/app/src/test/java/ican/ytx/com/mediacodectest/: ExampleUnitTest.java
MediaCodecTest/gradle/wrapper/: gradle-wrapper.properties
